# cmhog2k

exe/: cmhogin
src/: Changelog  Makefile  Makefile.antapex  Makefile.gfortran  Makefile.ifort  Makefile.in  README  TODO  acinclude.m4  bcdflt.c  bndry.h  bval.f  bval.src  checkin.c  cmhog.def  cmhog.def.highres  cmhog.def.in  cmhog.def.lowres  cmhogin  cmhogin.154  cmhogin.20  cmhogin.40  cmhogin.80  cmhogin.bench  cmhogin.bench2  config.status  configure  configure.in  cut.f  cut.src  cvmgt.f  cvmgt.h  cvmgt.src  dataio.f  dataio.src  empty.f  empty.src  fftw3.h  fftw_f77.h  field.h  (+72 more)
src/bench1/: map1.ccd  map2.ccd  map3.ccd
src/bench2/: grid0.fits  grid1.fits  map1.ccd  map2.ccd  map3.ccd
src/doc/: Makefile  denrt.ps  denxy.ps  hydro.aux  hydro.dvi  hydro.tex  mkbar  mkbar_cube_ref.csh  model1.ps  project  test.ps  yrat.ps
src/scripts/: README  do_fit  do_fit_panel  do_fit_panel_all  do_survey  do_survey_done  mk_cube1  mkbar_cube.csh  mkbar_map.csh  mkwip-loop  panel5x5.wip
